[gd_scene load_steps=2 format=3 uid="uid://e1f2g3h4i5j6"]

[ext_resource type="Script" path="res://src/ui/screens/settings_screen.gd" id="1_settings"]

[node name="SettingsScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="MasterLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
min_value = -30.0
max_value = 0.0
step = 1.0

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
step = 1.0

[node name="SfxLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
step = 1.0

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
